# optimization

./: .gitignore
p1/: P1.lhs  P1Test.lhs  p1.cabal
p2/: p2.cabal
p2/P2/: Morphism.lhs  Parser.lhs  Printing.lhs  Test.lhs
p4/: p4.cabal
p4/P4/: Morphism.lhs
px2/: px2.cabal
px2/PX2/: Algorithm.lhs  Orphan.lhs  Test.lhs  Tour.lhs
