name:                   p1
version:                1.0.0
license:                BSD3
license-file:           LICENSE
author:                 Hardy Jones
maintainer:             jones3.hardy@gmail.com
build-type:             Simple
cabal-version:          >=1.10

executable p1
  build-depends:          base >=4.8 && <4.9
                        , lens >=4.9 && <4.10
                        , geodetic >=0.1 && <0.2
                        , parsec >=3.1 && <3.2
                        , parsec-numbers >=0.1 && <0.2
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror -main-is P1
  main-is:              P1.lhs

test-suite p1test
  build-depends:          base
                        , geodetic
                        , lens
                        , parsec
                        , parsec-numbers
                        , QuickCheck >=2.8 && <2.9
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror -main-is P1Test -fno-warn-orphans
  main-is:              P1Test.lhs
  type:                 exitcode-stdio-1.0
