name:                   px2
version:                1.0.0
license:                BSD3
license-file:           LICENSE
author:                 Hardy Jones
maintainer:             jones3.hardy@gmail.com
build-type:             Simple
cabal-version:          >=1.10

executable px2
  build-depends:          base
                        , boxes
                        , containers
                        , filepath
                        , Glob
                        , lens
                        , multiset
                        , parsec
                        , parsec-numbers
                        , px2
                        , QuickCheck
                        , split
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror -main-is PX2
  main-is:              PX2.lhs

library
  build-depends:          base >=4.8 && <4.9
                        , boxes >=0.1 && <0.2
                        , containers >=0.5 && <0.6
                        , filepath >=1.4 && <1.5
                        , Glob >=0.7 && <0.8
                        , lens >=4.9 && <4.10
                        , multiset >=0.2 && <0.3
                        , parsec >=3.1 && <3.2
                        , parsec-numbers >=0.1 && <0.2
                        , QuickCheck >=2.8 && <2.9
                        , split >=0.2 && <0.3
  default-language:     Haskell2010
  exposed-modules:      PX2.Algorithm
                        PX2.Distance
                        PX2.Graph
                        PX2.Orphan
                        PX2.Parser
                        PX2.Printing
                        PX2.Tour

test-suite px2test
  build-depends:          base
                        , containers
                        , lens
                        , multiset
                        , px2
                        , QuickCheck
                        , split
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror -main-is PX2.Test
  main-is:              PX2/Test.lhs
  type:                 exitcode-stdio-1.0
